# Edublox

./: LICENSE  PROGRESS.md  Procfile  README.md  pyproject.toml  run.py
app/: __init__.py  config.py  extensions.py
app/db/: connection.py
app/routes/: ai.py  pages.py  universities.py
app/services/: ai_service.py  program_service.py  university_service.py
app/utils/: constants.py  text_utils.py
data/db/: schema.sql
data/logs/: ipeds_log.json  master_scrape_log.json  production_scrape_log.json  scrape_log.json  scrape_output.txt
data/raw/: Uni_data.xlsx  Uni_data_filled.xlsx  Uni_data_filled_universities_summary_.csv
migrations/: migrate.py  startup.py
scripts/data_import/: add_missing_programs.py  db_config.py  import_csv_data.py  import_programs_csv.py  ipeds_import.py  patch_institution_type.py  scorecard_import.py
scripts/fixes/: award_verifier.py  check_ipeds_columns.py  check_unt.py  debug2.py  debug_ipeds.py  debug_unt.py  fix_db_duplicates.py  fix_duplicates.py  fix_unt.py  fix_unt_clean.py  fix_unt_final.py  fix_unt_grad.py  fix_unt_v2.py
scripts/scrapers/: carnegie_fetcher.py  catalog_url_scraper.py  master_scraper.py  production_scraper.py  scrape_all.py  scrape_fast.py  scrape_from_csv.py  scrape_programs.py  scraper_utils.py  university_knowledge.py  university_scraper.py  unt_catalog_import.py
static/: main.js  polished_overrides.css  style.css
templates/: base.html  compare.html  index.html  map.html  match.html  state.html  university.html
tests/: conftest.py  test_routes.py  test_services.py
